--- a/css/consultas.css
+++ b/css/consultas.css
@@ -9,13 +9,28 @@
 .left-menu {
   background-color: #b1b1b1;
 }
-.float-left{
-  float: left;
-}
-.svg-icon {
-  height: 75px;
+
+.note-icon {
+  height: 100px;
+  background-size: 75px;
+  background-repeat: no-repeat;
+  background-position: center;
 }
 
-.form-left-menu{
-  padding-bottom: 10px
+.menu-text {
+  padding: 30px;
+}
+
+.form-left-menu {
+  padding: 0 30px 0 30px;
+}
+
+.height-700 {
+  height: 700px;
+}
+
+.sub-text-menu {
+  padding: 30px;
+  padding-top: 20px;
+  font-size: 11px;
 }
