--- a/css/consultas.css
+++ b/css/consultas.css
@@ -11,7 +11,8 @@
 }
 
 .note-icon {
-  height: 100px;
+  height: 75px;
+  margin-top: 25px;
   background-size: 75px;
   background-repeat: no-repeat;
   background-position: center;
@@ -31,6 +32,5 @@
 
 .sub-text-menu {
   padding: 30px;
-  padding-top: 20px;
   font-size: 11px;
 }
