--- a/css/consultas.css
+++ b/css/consultas.css
@@ -34,3 +34,12 @@
   padding: 30px;
   font-size: 11px;
 }
+
+.red-border{
+  border: 1px solid red;
+}
+
+.btn-background{
+  color: buttontext;
+  background-color: buttonface;
+}
