--- a/css/consultas.css
+++ b/css/consultas.css
@@ -1,3 +1,12 @@
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  color: #0056B3;
+}
+
 .row {
   margin-bottom: 50px;
 }
@@ -7,7 +16,7 @@
 }
 
 .left-menu {
-  background-color: #b1b1b1;
+  background-color: #bbdccd;
 }
 
 .note-icon {
