corrigido telas de negativa de debito e adicionado opção de baixar abaixo assinado na pavimentação de rua

--- a/css/consultas.css
+++ b/css/consultas.css
@@ -12,6 +12,10 @@ h6 {
 }
 
 .left-menu {
+  padding-top: 10%;
+  padding-left: 16px;
+  padding-right: 16px;
+  padding-bottom: 20px;
   background-color: #bbdccd;
   position: relative;
   height: 100%;
